import "client.comm.proto";
package client;

// 登陆
message role_login_req {
    required uint32      role_id  = 1; // 选择登录的角色ID
    optional server_head svr_head = 1000; // 服务端填写项，客户端不需要关心也不必填写数据
}

enum ROLE_LOGIN_RET_E {
    RLRE_SUCCESS      = 0; // 角色登录游戏成功
    RLRE_NOT_EXIST    = 1; // 角色id不存在
    RLRE_NOT_BELONG   = 2; // 这个角色不属于当前登录玩家
    RLRE_LOGIN_FROBID = 3; // 该角色已经被管理员禁止登录
    RLRE_SYSERROR     = 4; // 其它系统错误
}

message role_login_rsp {
    required ROLE_LOGIN_RET_E ret = 1; // 选择角色登录结果
    optional string           key = 2;
}

// 自动重连
message auto_login_req {
    required uint32      role_id  = 1;
    required string      key      = 2;
    optional server_head svr_head = 1000;
}

message auto_login_rsp {
    enum result {
        success = 0; // 成功
        timeout = 1; // 超时
        online  = 2; // 在线
        error   = 3; // 错误
    }
    required result ret = 1;
    optional string key = 2;
}

// 别处登陆
message repeat_login_msg {
    required uint32 type = 1;
}

////
message update_auto_login_key {
    required uint32 role_id = 1;
    required string key     = 2;
}

message update_agent_role {
    required uint32 role_id = 1;
}

// 通知客户端基础功能个人信息获取成功结束
message personal_info_success {
	required bool ret = 1;
}